@@ -25,11 +25,9 @@ class LoadBalancerAC
 {
 public:
   LoadBalancerAC(int64_t sqrtx, int64_t y, int threads, bool is_print);
-  bool get_work(int64_t& low, int64_t& high);
+  bool get_work(int64_t& low, int64_t& high, double& thread_secs);
 
 private:
-  void validate_segment_sizes();
-  void compute_total_segments();
   void print_status();
 
   int64_t low_ = 0;
@@ -37,7 +35,7 @@ private:
   int64_t x14_ = 0;
   int64_t y_ = 0;
   int64_t segment_size_ = 0;
-  int64_t large_segment_size_ = 0;
+  int64_t max_segment_size_ = 0;
   int64_t segment_nr_ = 0;
   int64_t total_segments_ = 0;
   double time_ = 0;
